--- a/manifest.json
+++ b/manifest.json
@@ -1,41 +1,22 @@
 {
-  "name": "Quản Lý Chi Tiêu Pro",
+  "name": "Quản Lý Chi Tiêu",
   "short_name": "QL Chi Tiêu",
-  "description": "Ứng dụng quản lý chi tiêu cá nhân - Pro Vip",
-  "start_url": "./index.html",
+  "description": "Ứng dụng quản lý chi tiêu cá nhân với giao diện đẹp và dễ sử dụng",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#f5f7fa",
-  "theme_color": "#2c3e50",
+  "background_color": "#2c3e50",
+  "theme_color": "#3498db",
   "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "categories": ["finance", "productivity", "utilities"],
-  "shortcuts": [
-    {
-      "name": "Thêm chi tiêu",
-      "short_name": "Thêm",
-      "description": "Thêm khoản chi tiêu mới",
-      "url": "./index.html?tab=add-expense"
-    },
-    {
-      "name": "Xem tổng quan",
-      "short_name": "Tổng quan",
-      "description": "Xem tổng quan chi tiêu",
-      "url": "./index.html"
-    }
-  ],
-  "scope": "./",
-  "lang": "vi",
-  "dir": "ltr"
+  ]
 }
